--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,11 @@
 # Set the default behavior in case core.autocrlf is not set.
-* text=auto
+* text=crlf
 
 # Explicitly declare text files you want to always be normalized and converted to native line endings on checkout.
+.gitattributes text eol=lf
+.gitignore text eol=lf
 *.ahk text eol=crlf
-*.md text eol=crlf
+*.md text eol=lf
+
+# Denote all files that are truly binary and should not be modified.
+*.ico binary
